--- a/public/index.jade
+++ b/public/index.jade
@@ -3,6 +3,14 @@ html
 		title!= message
 		link(href='main.css' rel='stylesheet' )
 		link(href='http://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css')
+		script
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-49939229-5', 'auto');
+			ga('send', 'pageview');
 	body
 		.vcent
 		.messageContainer
