--- a/public/index.jade
+++ b/public/index.jade
@@ -12,7 +12,8 @@ html
 			ga('send', 'pageview');
 	body
 		.vcent
-		.messageContainer
-			.ushld You should
-			.message!= message
+		.centerContainer
+			.messageContainer
+				.ushld You should
+				.message!= message
 		script(src='main.js')
