--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -1,17 +1,26 @@
 html, body, .vcent
 	height: 100%
 
-body
+body, input
 	margin: 0
 	font-family: 'Roboto', sans-serif
 	text-align: center
+	text-transform: uppercase
 	color: #f3c
-	background-color: #73a
+	background: #73a
 
-.vcent, .messageContainer
+.vcent, .centerContainer
 	display: inline-block
 	vertical-align: middle
 
-.messageContainer
+.centerContainer
 	width: 480px
-	text-transform: uppercase
+
+input[type="text"]
+	height: 96px
+	line-height: 96px
+	width: 100%
+	border: 0 solid #f3c
+	border-width: 0 6px 6px 0
+	outline: 0
+	font-size: 60px
